# robot_painter

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  requirements.txt
arm_kinematics/: CMakeLists.txt
arm_kinematics/include/arm_kinematics/: DataTypes.h  KR6ArmKinematics.h  KinematicConstants.h
arm_kinematics/src/: KR6ArmKinematics.cpp
arm_kinematics/test/: KinematicTest.cpp
arm_manipulation/: CMakeLists.txt  package.xml
arm_manipulation/include/arm_manipulation/: Manipulator.h
arm_manipulation/launch/: load_kr6r900sixx.launch
arm_manipulation/src/: Manipulator.cpp  MoveArm.cpp
fake_painter_enviroment_tf/: CMakeLists.txt  package.xml
fake_painter_enviroment_tf/src/: tf_broadcaster.cpp
kuka_cv/: CMakeLists.txt  package.xml
kuka_cv/msg/: Colour.msg
kuka_cv/scripts/: CameraTransformBroadcaster.py  CameraTransformations.py  PaleteFinder.py  StartCV.py  paleteDetector.py  utils.py
kuka_cv/srv/: RequestCanvas.srv  RequestPalette.srv  SetMode.srv
kuka_kr6r900_common/arm_kinematics/: CMakeLists.txt  package.xml
kuka_kr6r900_common/arm_kinematics/include/arm_kinematics/: KR6ArmKinematics.h  KinematicConstants.h
kuka_kr6r900_common/arm_kinematics/src/: KR6ArmKinematics.cpp
kuka_kr6r900_common/arm_kinematics/test/: KinematicTest.cpp
kuka_kr6r900_common/arm_manipulation/: CMakeLists.txt  package.xml
kuka_kr6r900_common/arm_manipulation/include/arm_manipulation/: Manipulator.h
kuka_kr6r900_common/arm_manipulation/launch/: load_kr6r900sixx.launch
kuka_kr6r900_common/arm_manipulation/src/: Manipulator.cpp  MoveArm.cpp
kuka_kr6r900_common/kr6_kinematics_plugin/: CMakeLists.txt  kr6_kinematics_plugin_description.xml  package.xml
kuka_kr6r900_common/kr6_kinematics_plugin/include/kr6_kinematics_plugin/: KR6KinematicsPlugin.h  configuration_comparator.h
kuka_kr6r900_common/kr6_kinematics_plugin/src/: KR6KinematicsPlugin.cpp  test.cpp
kuka_kr6r900_common/kuka_cv/: CMakeLists.txt  package.xml
kuka_kr6r900_common/kuka_cv/include/: CameraTransforms.h  CommonCV.h
kuka_kr6r900_common/kuka_cv/include/kuka_cv/: PainterCV.h
kuka_kr6r900_common/kuka_cv/msg/: Color.msg  Palette.msg  Pose.msg
kuka_kr6r900_common/kuka_cv/scripts/: CameraTransformations.py  FrameBroadcaster.py  StartCV.py  canvasTransformBroadcaster.py
kuka_kr6r900_common/kuka_cv/src/: CameraTransforms.cpp  CommonCV.cpp  PainterCV.cpp
kuka_kr6r900_common/kuka_cv/srv/: RequestCanvas.srv  RequestPalette.srv
kuka_kr6r900_common/kuka_cv/tests/: CalcWidth.cpp  CanvasTest.cpp  FirstTets.cpp  PainterCVTest.cpp  PaletteTest.cpp  broadcaster_test.cpp
kuka_kr6r900_common/kuka_kr6r900_common/: CMakeLists.txt  package.xml
kuka_kr6r900_common/kuka_manipulation_moveit/: CMakeLists.txt  package.xml
kuka_kr6r900_common/kuka_manipulation_moveit/include/kuka_manipulation_moveit/: KukaMoveit.hpp
kuka_kr6r900_common/kuka_manipulation_moveit/src/: KukaMoveit.cpp
kuka_kr6r900_common/kuka_manipulation_moveit/test/: MotionPlannerInterface.cpp  MoveArm.cpp  PushAndUpActionTest.cpp  RoundTrajectoryTest.cpp  TrajectoryPipelineTest.cpp
kuka_kr6r900_common/kuka_moveit_config/: .setup_assistant  package.xml
kuka_kr6r900_common/kuka_moveit_config/config/: controllers.yaml  joint_limits.yaml  kr6_kinematics.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml
kuka_kr6r900_common/kuka_moveit_config/launch/: demo.launch  fake_demo.launch  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
kuka_kr6r900_simulation/: CMakeLists.txt  package.xml
local_task_planner/: CMakeLists.txt  package.xml
local_task_planner/launch/: start_paint_test.launch
local_task_planner/src/: CalibrateTool.cpp  DrawCanvasSquare.cpp  Drawing.cpp
local_task_planner/test/: CameraTest.cpp  DrawingByTrajectorysTest.cpp  DrawingByTrajectorysTest_old.cpp  DrawingTest.cpp  move_group_assembly_test.cpp  move_group_test.cpp  moveit_ik_test.cpp
misc/: README.md  Start_up.md  gaka_web.service  gaka_web.sh  image_gen.sh  ipfs.service  ipfs_sendler.service  ipfs_sendler.sh  kuka_eki_hw_interface.service  kuka_image_gen.service  kuka_moveit_config.service  kuka_picture_process.service  mozilla_kiosk.service  video_saver.service  video_saver.sh
picture_preprocessing/: CMakeLists.txt  LICENSE  README.md  package.xml
picture_preprocessing/data/: test.bag
picture_preprocessing/launch/: picture_process.launch
picture_preprocessing/scripts/: TextConverter.py  TextConverter_old.py  painting_setup.py
scenes/: KukaKR6R900.ttt
