<?xml version="1.0"?>
<package>
  <name>kuka_kr6r900_simulation</name>
  <version>0.0.0</version>
  <description>The kuka_kr6r900_simulation package</description>

  <maintainer email="senserlex@gmail.com">Aleksei Ovcharov</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
