<?xml version="1.0"?>
<package>
  <name>picture_preprocessing</name>
  <version>0.0.0</version>
  <description>The Picture-PreProcessing package</description>

  <maintainer email="senserlex@gmail.com">Aleksei Ovcharov</maintainer>
  <maintainer email="senex@todo.todo">Valirii Chernov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
