<?xml version="1.0"?>
<package>
    <name>arm_kinematics</name>
    <version>0.0.0</version>
    <description>The arm_kinematics package</description>

    <maintainer email="senserlex@gmail.com">Aleksei Ovcharov</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
