<?xml version="1.0"?>
<package>
  <name>arm_manipulation</name>
  <version>0.0.0</version>
  <description>The arm_manipulation package</description>

  <maintainer email="senserlex@gmail.com">Aleksei Ovcharov</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arm_kinematics</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <run_depend>arm_kinematics</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>kuka_kr6_support</run_depend>

  <export>
  </export>
</package>
