<?xml version="1.0"?>
<package format="2">
    <name>kr6_kinematics_plugin</name>
    <version>0.0.0</version>
    <description>The moveit kinematics plugin for kuka kr6r900</description>


    <maintainer email="ovcharov.a@protonmail.com">Aleksei Ovcharov</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>arm_kinematics</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_ros_planning</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>arm_kinematics</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>moveit_core</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>moveit_ros_planning</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>arm_kinematics</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>moveit_ros_planning</exec_depend>

    <export>
        <moveit_core plugin="${prefix}/kr6_kinematics_plugin_description.xml"/>
    </export>
</package>
