<?xml version="1.0"?>
<package format="2">
  <name>kuka_cv</name>
  <version>0.0.0</version>
  <description>The kuka_cv package</description>

  <maintainer email="senex@todo.todo">senex</maintainer>

  <license>TODO</license>

  <author email="ovcharov.a@protonmail.com">Aleksei Ovcharov</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
