<?xml version="1.0"?>
<package>
  <name>kuka_kr6r900_common</name>
  <version>0.0.0</version>
  <description>Metapackage contain common package for solve some tasks by kuka kr6r900</description>

  <maintainer email="senserlex@gmail.com">Aleksei Ovcharov</maintainer>

  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
